--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
+@import '../node_modules/bootstrap/dist/css/bootstrap.css';
+@import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
