Added service, ui improvement

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,10 +17,10 @@
           Reports
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Prices</a>
-          <a class="dropdown-item" href="#">Carbon</a>
-          <a class="dropdown-item" href="#">Generation</a>
-          <a class="dropdown-item" href="#">Demand</a>
+          <a class="dropdown-item" href="prices">Prices</a>
+          <a class="dropdown-item" href="carbon">Carbon</a>
+          <a class="dropdown-item" href="generation">Generation</a>
+          <a class="dropdown-item" href="demand">Demand</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="dashboard">Snapshot</a>
         </div>
