--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,4 @@ html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
