--- a/src/app/nudge/nudge.component.html
+++ b/src/app/nudge/nudge.component.html
@@ -2,19 +2,26 @@
   <div class="col-4">
   </div>
   <div class="col-4 m-4">
-     <div *ngIf="isEnvironmental | async; let isEnvironmental; else notEnvironmental">
-        <h1><i class="material-icons md-48 pr-2">thumb_up</i>Use Electricity</h1>
+    <div>
+      <div *ngIf="carbons.percent < carbonThreshold | async; else notEnvironmental">
+       <h1><i class="material-icons md-48 pr-2">thumb_up</i>Use Electricity</h1>
         <div class="alert-success">
-          <h2 *ngFor="let carbons of carbons | async" class="p-4">You can use electricity now. It's environmentally friendly. The grid is using {{ carbons.percent / 100 | percent }} fossil fuel generation.</h2>
+          <h2 *ngFor="let carbons of carbons | async" class="p-4">You can use electricity now. It's environmentally friendly. The grid is currently {{ carbons.percent | percent }} fossil fuel generation.</h2>
         </div>
-    </div>
+      </div>
+        
+        <ng-template #notEnvironmental>
+          <h1><i class="material-icons md-48 pr-2">warning</i>Conserve Electricity</h1>
+          <div class="alert-danger">
+          <h2 *ngFor="let carbons of carbons | async" class="p-4">You should not use electricity now. It's not environmentally friendly. The grid is currently {{ carbons.percent | percent }} fossil fuel generation.</h2>
+          </div>
+        </ng-template>
+    
+        <ng-template #loading>
+          Loading...
+        </ng-template>
       
-      <ng-template #notEnvironmental>
-        <h1><i class="material-icons md-48 pr-2">warning</i>Conserve Electricity</h1>
-        <div class="alert-danger">
-          <h2 *ngFor="let carbons of carbons | async" class="p-4">You should not use electricity now. It's not environmentally friendly. The grid is using {{ carbons.percent / 100 | percent }} fossil fuel generation.</h2>
-        </div>
-      </ng-template>
+    </div>
   </div>
   <div class="col-4">
   </div>
