--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
       Welcome to {{ title }}!
       </h1>
       <p>
-        eNudge displays your energy stats to help you know when you should be turning off appliances to be most environmentally friendly.
+        eNudge helps you use energy when it is most environmentally friendly.
       </p>
     </div>
     <div class="col-3">
