--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">eNudge</a>
+<a class="navbar-brand brand-offset" href="">
+    <img class="d-none d-lg-block img-fluid" src="assets/img/enudge-prod-logo.svg" width="100px" height="auto">
+    <img class="d-lg-none img-fluid mt-3 ml-2" src="assets/img/enudge-e-logo.svg" width="100px" height="auto">
+</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
