--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,55 @@
-/* You can add global styles to this file, and also import other style files */
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
-@import '../node_modules/bootstrap/dist/css/bootstrap.css';
-@import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import '~@angular/material/theming'; // Material Design theming
+@import "./styles/global/theme"; // Custom Material Design colors. 
+@import "./styles/global/fonts"; // Custom fonts
+@import "~bootstrap/scss/bootstrap"; // All of bootstrap. Remove if using individual imports below
+@import "./styles/global/reset"; // Minor changes to make Material Design more friendly with bootstrap
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core($custom-typography);
+
+
+/*
+// Imports main individual utilities, functions, variables, and mixins that are needed by other Bootstrap files
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/reboot";
+@import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/root";
+@import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/dropdown";
+@import "~bootstrap/scss/nav";
+@import "~bootstrap/scss/navbar";
+@import "~bootstrap/scss/images";
+@import "~bootstrap/scss/type";
+@import "reset";
+*/
+
+/* Minor utilities you may or may not use
+
+@import "code";
+@import "tables";
+@import "forms";
+@import "buttons";
+@import "transitions";
+@import "button-group";
+@import "input-group";
+@import "custom-forms";
+@import "card";
+@import "breadcrumb";
+@import "pagination";
+@import "badge";
+@import "jumbotron";
+@import "alert";
+@import "progress";
+@import "media";
+@import "list-group";
+@import "close";
+@import "modal";
+@import "tooltip";
+@import "popover";
+@import "carousel";
+@import "print";
+*/
