--- a/src/app/carbon/carbon.component.html
+++ b/src/app/carbon/carbon.component.html
@@ -1,7 +1,4 @@
 <div class="container">
-  <h2 *ngFor="let users of users | async">
-      Your current stats at {{users.address1}} are:
-  </h2>
   <div class="row">
     <div class="col-12">
       <table class="table">
@@ -26,13 +23,13 @@
               {{ calculateAverage(carbons.percent) }}
             </td>
             <td *ngFor="let carbons of carbons | async" [ngStyle]="{'color': setCarbonColor(carbons.percent)}">
-              {{carbons.median / 100 | percent}}
+              {{carbons.median | percent}}
             </td>
             <td *ngFor="let carbons of carbons | async" [ngStyle]="{'color': setCarbonColor(carbons.percent)}">
-              {{carbons.max / 100 | percent}}
+              {{carbons.max | percent}}
             </td>
             <td *ngFor="let carbons of carbons | async" [ngStyle]="{'color': setCarbonColor(carbons.percent)}">
-              {{carbons.min / 100 | percent}}
+              {{carbons.min | percent}}
             </td>
           </tr>
           <tr>
