--- a/src/app/nudge/nudge.component.html
+++ b/src/app/nudge/nudge.component.html
@@ -3,7 +3,7 @@
   </div>
   <div class="col-4 m-4">
     <div>
-      <div *ngIf="carbons.percent < carbonThreshold | async; else notEnvironmental">
+      <div *ngIf="0.99 < carbonThreshold | async; else notEnvironmental">
        <h1><i class="material-icons md-48 pr-2">thumb_up</i>Use Electricity</h1>
         <div class="alert-success">
           <h2 *ngFor="let carbons of carbons | async" class="p-4">You can use electricity now. It's environmentally friendly. The grid is currently {{ carbons.percent | percent }} fossil fuel generation.</h2>
