--- a/src/styles/global/_theme.scss
+++ b/src/styles/global/_theme.scss
@@ -1,12 +1,10 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$app-primary: mat-palette($mat-cyan, 800);
-// #90caf9
-$app-secondary: mat-palette($mat-gray, 500);
-// #c3fdff
-$app-accent:  mat-palette($mat-deep-orange, A200, A100, A400);
-// #ffff8d
+$app-primary: mat-palette($mat-light-blue, 200);
+$app-secondary: mat-palette($mat-green, 200);
+$app-accent:  mat-palette($mat-yellow, A200, A100, A400);
+
 // The warn palette is optional (defaults to red).
 $app-warn:    mat-palette($mat-red);
 
