--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -2,14 +2,16 @@
 @import '~@angular/material/theming';
 
 // Copy the palettes from theme.scss.
-$app-primary: mat-palette($mat-cyan, 800);
-$app-secondary: mat-palette($mat-gray, 500);
-$app-accent:  mat-palette($mat-deep-orange, A200, A100, A400);
+$app-primary: mat-palette($mat-light-blue, 200);
+$app-secondary: mat-palette($mat-green, 200);
+$app-accent:  mat-palette($mat-yellow, A200, A100, A400);
+$app-warn:    mat-palette($mat-red);
 
-// Create globally available color vars 
+// Create globally available shorthand color vars 
 $primary: mat-color($app-primary);
 $secondary: mat-color($app-secondary);
 $accent: mat-color($app-accent);
+$warn: mat-color($app-warn);
 $heading-color: #384850;
 
 body, p, div {
