--- a/src/app/ui/nudge/nudge.component.scss
+++ b/src/app/ui/nudge/nudge.component.scss
@@ -1,4 +1,4 @@
-@import "../../styles/global/variables"; // Custom variables
+@import "../../../styles/global/variables"; // Custom variables
 
 .nudge-card {
     max-width: 400px;
