--- a/src/app/ui/nudge/nudge.component.html
+++ b/src/app/ui/nudge/nudge.component.html
@@ -1,22 +1,24 @@
 <div class="row">
-  <div class="col m-5 align-self-center">
-      <mat-card *ngIf="0.75 < carbonThreshold | async; else notEnvironmental" class="nudge-card">
+  <div class="col m-5 align-self-center" *ngFor="let carbons of carbons | async">
+      <mat-card *ngIf="carbons.percent < 0.75; else notEnvironmental" class="nudge-card">
         <mat-card-header>
-          <h1><i class="material-icons pr-2" color="accent">thumb_up</i>Use Electricity</h1>
+          <h2 class="green"><i class="material-icons pr-2">thumb_up</i>Use Electricity</h2>
         </mat-card-header>
         <mat-card-content>
-          <h2 *ngFor="let carbons of carbons | async" class="p-4 alert-success">You can use electricity now. It's environmentally friendly. The grid is currently {{ carbons.percent | percent }} fossil fuel generation.</h2>
+          <h2 class="p-4 alert-success">You can use electricity now. It's environmentally friendly. The grid is currently {{ carbons.percent | percent }} fossil fuel generation.</h2>
         </mat-card-content>
       </mat-card>
         
-        <ng-template #notEnvironmental>
+      <ng-template #notEnvironmental>
+        <mat-card>
           <mat-card-header>
             <h2 class="warn"><i class="material-icons pr-2">warning</i>Conserve Electricity</h2>
           </mat-card-header>
           <mat-card-content>
-            <h2 *ngFor="let carbons of carbons | async" class="p-4 alert-danger">You should not use electricity now. It's not environmentally friendly. The grid is currently {{ carbons.percent | percent }} fossil fuel generation.</h2>
+            <h2 class="p-4 alert-danger">You should not use electricity now. It's not environmentally friendly. The grid is currently {{ carbons.percent | percent }} fossil fuel generation.</h2>
           </mat-card-content>
-        </ng-template>
+        </mat-card>
+      </ng-template>
     
         <ng-template #loading>
           <mat-card-header>
