--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar>
+  <button mat-button (click)="sidenav.toggle()"><mat-icon mat-list-icon>menu</mat-icon></button>
   <app-brand></app-brand>
+  <span class="spacer"></span>
   <app-nav></app-nav>
 </mat-toolbar>
 
@@ -10,7 +12,6 @@
   </mat-sidenav>
   
   <mat-sidenav-content>
-    <p><button mat-button (click)="sidenav.toggle()"><mat-icon mat-list-icon>menu</mat-icon></button></p>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
