--- a/src/app/ui/brand/brand.component.html
+++ b/src/app/ui/brand/brand.component.html
@@ -1,8 +1,8 @@
 <div>
 <a href="">
-    <img src="assets/img/enudge-prod-logo.svg" width="75px" height="auto">
+    <img class="logo" src="assets/img/enudge-prod-logo.svg" width="75px" height="auto">
     <!--<img src="assets/img/enudge-e-logo.svg" width="75px" height="auto">-->
 </a>
-<span class="secondary">eNudge</span>
+<span class="brand">eNudge</span>
 </div>
 
