--- a/src/app/ui/brand/brand.component.scss
+++ b/src/app/ui/brand/brand.component.scss
@@ -1,3 +1,10 @@
+@import 'variables'; // Custom variables
+
 .logo {
-    margin-top: 2rem;
+    margin-right: 1rem;
+}
+
+.brand {
+    font-weight: 600;
+    color: $secondary;
 }
