Update dashboard and nudge

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -2,27 +2,27 @@
   <h4 mat-subheader>Quick Stats</h4>
     <mat-list-item>
     <mat-icon mat-list-icon color="primary">dashboard</mat-icon>
-    <a routerLink="/dashboard" routerLinkActive = "active" mat-line>Dashboard</a>
+    <a routerLink="/dashboard" routerLinkActive = "active" mat-line>Current Conditions</a>
   </mat-list-item>
   
   <mat-divider></mat-divider>
   
-  <h4 mat-subheader>Reports</h4>
+  <h4 mat-subheader>Information</h4>
   <mat-list-item>
     <mat-icon mat-list-icon class="price">attach_money</mat-icon>
-    <p mat-line>Prices</p>
+    <a href="https://hourlypricing.comed.com" mat-line>Understand Hourly Pricing</a>
   </mat-list-item>
   <mat-list-item>
     <mat-icon mat-list-icon class="carbon">whatshot</mat-icon>
-    <p mat-line>Carbon</p>
+    <a href="https://www.e2intel.com/" mat-line>Understand the Grid</a>
   </mat-list-item>
   <mat-list-item>
     <mat-icon mat-list-icon class="generation">wb_sunny</mat-icon>
-    <p mat-line>Generation</p>
+    <a href="https://www.comed.com/SmartEnergy/MyGreenPowerConnection/Pages/SolarEnergy.aspx?gclid=Cj0KCQjw_OzrBRDmARIsAAIdQ_LY1whybKDeeVKcbF44OTFR0u5fvq0Xk-XeD1RkeeJXuPAKGVShORkaAof9EALw_wcB" mat-line>Get Solar</a>
   </mat-list-item>
   <mat-list-item>
     <mat-icon mat-list-icon class="consumption">power</mat-icon>
-    <p mat-line>Consumption</p>
+    <a href="https://www.comed.com/WaysToSave/ForYourHome/Pages/default.aspx" mat-line>Reduce Your Consumption</a>
   </mat-list-item>
   
 </mat-nav-list>
