--- a/src/app/ui/brand/brand.component.html
+++ b/src/app/ui/brand/brand.component.html
@@ -3,6 +3,6 @@
     <img class="logo" src="assets/img/enudge-prod-logo.svg" width="75px" height="auto">
     <!--<img src="assets/img/enudge-e-logo.svg" width="75px" height="auto">-->
 </a>
-<span class="brand">eNudge</span>
+<span class="brand">e2i</span>
 </div>
 
